--- a/Assets/_Develop/View/Project.Develop.View.asmdef
+++ b/Assets/_Develop/View/Project.Develop.View.asmdef
@@ -1,11 +1,12 @@
 {
-    "name": "Project.View",
-    "rootNamespace": "Project.View",
+    "name": "Project.Develop.View",
+    "rootNamespace": "Project.Develop.View",
     "references": [
-        "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:560b04d1a97f54a4e82edc0cbbb69285",
-        "GUID:2359c074672083046b6ff6b309700f8e",
+        "GUID:66f242240a32cc3489a37d27064baf2f",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:2359c074672083046b6ff6b309700f8e",
         "GUID:174b432621f01fb418be26ffc6c90e22"
     ],
     "includePlatforms": [],
